# tdf-app

./: .detoxrc.js  .dockerignore  .gitignore  .gitmodules  0001-edit-dialog-controlled.patch  AI_WORKFLOW.md  ARCHITECTURE_DIAGRAM.md  ARTIST_FEATURES_REFERENCE.md  BACKEND_CHANGES_NEEDED.md  BEST_PRACTICES.md  CONTRIBUTING.md  DELIVERY_MANIFEST.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_UPDATE.md  DEVELOPMENT.md  DOCUMENTATION.md  DOCUMENTATION_IMPROVEMENTS_SUMMARY.md  Dockerfile  FEATURES.md  FORMAL_VERIFICATION.md  HASKELL_BEST_PRACTICES.md  HASKELL_CHECKLIST.md  IDENTITY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MEMORY.md  MOBILE_APP.md  MULTI_ROLE_CHANGES.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_REFERENCE.md  README.md  SECURITY_NOTICE.md  SELF_HEALING_AND_CONTINUOUS_IMPROVEMENT.md  SOCIAL_EVENTS_ARCHITECTURE.md  SOCIAL_EVENTS_COMPLETION_SUMMARY.md  SOCIAL_EVENTS_DOCUMENTATION_INDEX.md  SOCIAL_EVENTS_INTEGRATION.md  SOCIAL_EVENTS_INTEGRATION_STATUS.md  SOCIAL_EVENTS_QUICK_REFERENCE.md  (+29 more)
tdf-hq/: .dockerignore  .env.example  .env.lo  .gitignore  AGENTS.md  DATABASE_SCHEMA_GUIDE.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  MIGRATION_FREE_DEPLOYMENT.md  Makefile  README.md  README_SOCIAL_EVENTS.md  SOCIAL_EVENTS_BACKEND_STATUS.md  SOCIAL_EVENTS_IMPLEMENTATION.md  docker-compose.yml  package.yaml  stack-snapshot.yaml  stack.yaml  tdf-hq.cabal
tdf-hq/.cabal/: config
tdf-hq/.github/workflows/: openapi-validate.yml
tdf-hq/.stack-root-local/: stack.sqlite3
tdf-hq/.stack-root-local/pantry/: pantry.sqlite3
tdf-hq/api/: openapi.yaml
tdf-hq/app/: GenMigration.hs  Main.hs  gen-migration.hs
tdf-hq/config/: default.env.example
tdf-hq/contracts/: README.md
tdf-hq/contracts/templates/: 01_Colaboracion_Distribucion.tex  02_Sesion_Grabacion.tex  03_Presentacion_Evento.tex  04_Enseñanza_TDF_Academy.tex  05_Uso_Espacios_TDF.tex  06_Live_Sessions.tex  tdf_preamble.tex
tdf-hq/db/: init.sh
tdf-hq/db/migrations/: 2025-11-02_add_metadata_records.sql  2025-11-03_create_contracts.sql  2026-04-23_inventory_checkout_amounts.sql  2026-04-23_inventory_checkout_public.sql  2026-04-23_inventory_checkout_terms_and_payment.sql
tdf-hq/dist-newstyle-fno/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
tdf-hq/docs/: CONTRACTS_API.md  CalendarAPI.md  api.md  lesson-management-questions.md  service_marketplace_formal_spec.md
tdf-hq/docs/openapi/: api.yaml  lessons-and-receipts.yaml  user-roles.yaml
tdf-hq/migrations/: 0001_create_social_events.sql
tdf-hq/schemas/: _tdf_common.schema.json  anexo_cronograma.schema.json  anexo_derechos.schema.json  anexo_inputlist.schema.json  anexo_techrider.schema.json  base_contract.schema.json  colaboracion_distribucion.schema.json  ensenanza_academy.schema.json  presentacion_evento.schema.json  sesion_grabacion.schema.json  uso_espacios.schema.json
tdf-hq/scripts/: create_artists_from_list.sh  dev_run.sh  export_data.sh  init_fresh_db.sh  migrate_academy.sh  migrate_course_registrations.sh  migrate_lessons.sh  migrate_trial_availability.sh  seed_academy.sh  smoke.sh
tdf-hq/scripts/latex/: render.sh
tdf-hq/sql/: 001_multi_role_migration.sql  002_party_booking_enhancements.sql  2025-10-21_packages_lessons_receipts.sql  2025-11-04_academy.sql  2025-11-05_refactor_students_teachers_to_parties.sql  2025-11-16_leads_whatsapp.sql  2025-11-21_course_registrations.sql  2026-02-23_course_email_events.sql  2026-02-25_course_email_event_daily_cap_index.sql  2026-03-07_course_registration_dossier.sql  2026-05-24_ticketing_system_enhancements.sql  2026-05-25_content_engagement.sql  2026-05-28_artist_tipping.sql  2026-05-28_course_registration_stripe_pi.sql  2026-05-28_course_subscriptions.sql  2026-05-28_party_stripe_customer.sql  2026-06-14_artist_engagement_core.sql  2026-07-07_marketplace_stripe_checkout.sql  2026-07-12_event_discovery_imports.sql  2026-07-12_marketplace_active_stripe_payment.sql  2026-07-12_notification_table.sql  2026-07-12_ticket_checkout_idempotency.sql  2026-07-12_ticketing_runtime_schema.sql  2026-07-15_inventory_runtime_schema.sql  2026-07-15_social_discovery_reviews.sql  init_schema.sql
tdf-hq/src/TDF/: API.hs  Auth.hs  Config.hs  Cors.hs  Cron.hs  DB.hs  DTO.hs  Email.hs  LogBuffer.hs  Meta.hs  Models.hs  ModelsExtra.hs  OpenAPI.hs  Pipelines.hs  RagStore.hs  Seed.hs  Server.hs  ServerAdmin.hs  ServerAuth.hs  ServerExtra.hs  ServerFanClub.hs  ServerFeedback.hs  ServerFuture.hs  ServerInstagramOAuth.hs  ServerInternships.hs  ServerLiveSessions.hs  ServerProposals.hs  ServerRadio.hs  Services.hs  SocialEvents.hs  UUIDInstances.hs  UserActivity.hs  Version.hs
tdf-hq/src/TDF/API/: Admin.hs  Bands.hs  Calendar.hs  Drive.hs  Facebook.hs  Feedback.hs  Future.hs  Instagram.hs  InstagramOAuth.hs  Internships.hs  Inventory.hs  Label.hs  LiveSessions.hs  Marketplace.hs  Payments.hs  Pipelines.hs  Proposals.hs  Radio.hs  Rooms.hs  Services.hs  Sessions.hs  SocialDiscoveryAPI.hs  SocialEventsAPI.hs  SocialSyncAPI.hs  Types.hs  WhatsApp.hs
tdf-hq/src/TDF/App/: Boot.hs
tdf-hq/src/TDF/CMS/: Models.hs
tdf-hq/src/TDF/Calendar/: Models.hs
tdf-hq/src/TDF/Contracts/: API.hs  Server.hs  Types.hs
tdf-hq/src/TDF/Courses/: Production.hs
tdf-hq/src/TDF/DTO/: SocialDiscoveryDTO.hs  SocialEventsDTO.hs  SocialSyncDTO.hs
tdf-hq/src/TDF/Email/: Service.hs
tdf-hq/src/TDF/Handlers/: InputList.hs
tdf-hq/src/TDF/Invoice/: SRI.hs
tdf-hq/src/TDF/Leads/: Model.hs
tdf-hq/src/TDF/Models/: SocialEventsModels.hs
tdf-hq/src/TDF/Profiles/: Artist.hs
tdf-hq/src/TDF/Routes/: Academy.hs  Courses.hs
tdf-hq/src/TDF/Server/: SocialDiscovery.hs  SocialEventsHandlers.hs  SocialSync.hs
tdf-hq/src/TDF/Services/: EventDiscovery.hs  FacebookMessaging.hs  InstagramMessaging.hs  InstagramSync.hs  Stripe.hs
tdf-hq/src/TDF/Trials/: API.hs  DTO.hs  (+3 more)
tdf-hq/templates/: invoice.dark.tex
tdf-hq/templates/proposals/: tdf_live_sessions.tex
tdf-hq/test/: Spec.hs
tdf-hq/test/TDF/: APITypesSpec.hs  ServerAdminSpec.hs  ServerAuthSpec.hs  ServerExtraSpec.hs  ServerFanClubSpec.hs  ServerProposalsSpec.hs  ServerSpec.hs
(+1323 files in other folders)
