cabal-version:      2.4
name:               tdf-hq
version:            0.1.0.0
synopsis:           TDF HQ - CRM, Scheduling, Packages, Invoicing, Inventory (skeleton)
license:            MIT
author:             TDF Records (Diego Saá)
maintainer:         tdf@example.com
build-type:         Simple

executable tdf-hq-exe
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:
    TDF.API.Admin
    TDF.API
    TDF.API.Bands
    TDF.API.Instagram
    TDF.API.Future
    TDF.API.LiveSessions
    TDF.API.Feedback
    TDF.API.Payments
    TDF.API.Inventory
    TDF.API.Pipelines
    TDF.API.Calendar
    TDF.API.Marketplace
    TDF.API.Rooms
    TDF.API.Sessions
    TDF.API.Types
    TDF.API.WhatsApp
    TDF.Auth
    TDF.Config
    TDF.Cron
    TDF.Cors
    TDF.DB
    TDF.DTO
    TDF.Email
    TDF.Handlers.InputList
    TDF.LogBuffer
    TDF.Meta
    TDF.Models
    TDF.ModelsExtra
    TDF.UUIDInstances
    TDF.Leads.Model
    TDF.Email.Service
    TDF.Services
    TDF.Pipelines
    TDF.Routes.Academy
    TDF.Seed
    TDF.Server
    TDF.ServerAdmin
    TDF.ServerExtra
    TDF.ServerLiveSessions
    TDF.ServerFeedback
    TDF.ServerFuture
    TDF.Routes.Courses
    TDF.Trials.API
    TDF.Trials.DTO
    TDF.Trials.Models
    TDF.Trials.Seed
    TDF.Trials.Server
    TDF.Calendar.Models
    TDF.CMS.Models
    TDF.Version
    TDF.WhatsApp.Client
    TDF.WhatsApp.Types
    TDF.WhatsApp.Service
    TDF.Profiles.Artist
    Paths_tdf_hq
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                 >=4.14 && <5
    , aeson                >=2.0
    , bytestring
    , text
    , time
    , random
    , containers
    , gitrev
    , http-client
    , http-client-tls
    , persistent           >=2.14
    , persistent-template  >=2.12
    , persistent-postgresql >=2.13
    , persistent-sqlite     >=2.13
    , resource-pool
    , monad-logger
    , resourcet
    , conduit
    , servant              >=0.19
    , servant-server       >=0.19
    , servant-multipart
    , servant-multipart
    , postgresql-simple
    , http-types
    , http-media
    , warp                 >=3.3
    , wai
    , wai-cors
    , http2                >=5.0 && <5.3
    , entropy
    , filepath
    , directory
    , transformers
    , mtl
    , mime-mail
    , unordered-containers
    , uuid-types
    , scientific
    , safe-exceptions
    , base64-bytestring
    , directory
    , process
    , bcrypt
    , path-pieces
    , uuid
    , template-haskell
    , file-embed
    , smtp-mail

test-suite tdf-hq-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test, src
  main-is:           Spec.hs
  other-modules:
    Paths_tdf_hq
    TDF.API
    TDF.API.Admin
    TDF.API.Bands
    TDF.API.Future
    TDF.API.Payments
    TDF.API.Feedback
    TDF.API.Inventory
    TDF.API.Instagram
    TDF.API.Calendar
    TDF.API.Marketplace
    TDF.API.LiveSessions
    TDF.Calendar.Models
    TDF.API.Pipelines
    TDF.API.Rooms
    TDF.API.Sessions
    TDF.API.Types
    TDF.APITypesSpec
    TDF.Auth
    TDF.Config
    TDF.Cron
    TDF.DB
    TDF.DTO
    TDF.Email
    TDF.Email.Service
    TDF.Handlers.InputList
    TDF.Leads.Model
    TDF.Meta
    TDF.Models
    TDF.ModelsExtra
    TDF.Pipelines
    TDF.Profiles.Artist
    TDF.Profiles.ArtistSpec
    TDF.Routes.Academy
    TDF.Routes.Courses
    TDF.Seed
    TDF.Server
    TDF.ServerAdmin
    TDF.ServerExtra
    TDF.ServerFuture
    TDF.ServerLiveSessions
    TDF.ServerFeedback
    TDF.ServerSpec
    TDF.Services
    TDF.Trials.API
    TDF.Trials.DTO
    TDF.Trials.Models
    TDF.Trials.Server
    TDF.UUIDInstances
    TDF.Version
    TDF.LogBuffer
    TDF.WhatsApp.Types
    TDF.WhatsApp.Client
    TDF.WhatsApp.Service
  ghc-options:       -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints
  default-language:  Haskell2010
  build-depends:
      base                 >=4.14 && <5
    , aeson                >=2.0
    , bytestring
    , text
    , time
    , containers
    , gitrev
    , persistent           >=2.14
    , persistent-template  >=2.12
    , persistent-postgresql >=2.13
    , persistent-sqlite     >=2.13
    , resource-pool
    , monad-logger
    , resourcet
    , conduit
    , servant              >=0.19
    , servant-server       >=0.19
    , servant-multipart
    , http-types
    , http-media
    , wai
    , warp                 >=3.3
    , wai-cors
    , http2                >=5.0 && <5.3
    , postgresql-simple
    , random
    , http-client
    , http-client-tls
    , entropy
    , filepath
    , directory
    , transformers
    , mtl
    , mime-mail
    , unordered-containers
    , uuid-types
    , scientific
    , safe-exceptions
    , base64-bytestring
    , process
    , bcrypt
    , path-pieces
    , uuid
    , template-haskell
    , file-embed
    , hspec                >=2.7
    , smtp-mail
